--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "nodemon server.js"
   },
   "dependencies": {
+    "express": "^4.17.2",
+    "mongoose": "^6.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.3",
@@ -14,6 +17,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "nodemon": "^2.0.15",
     "vite": "^2.7.2"
-  }
+  },
+  "type": "module"
 }
